chore: print problems nicely
Co-authored-by: Saul Castañeda <scastaneda@itba.edu.ar>
Co-authored-by: Juan Burda <jburda@itba.edu.ar>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ add_executable(Compiler
 
 	src/utils/wrapper-functions.c
 	src/utils/stringify.c
+	src/utils/errors/problem-context.c
 
 	src/libs/list-adt.c
 
